--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # SITE CONFIGURATION
 baseurl:
-url: "https://devYurim.github.io"
+url: "https://bill7845.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
 theme_settings:
   # Meta
-  title: devYurim
+  title: KiHyuk
   avatar: assets/img/blogmark.png
   favicon: assets/favicon.ico
   gravatar: # Email MD5 hash
-  description: "developer blog" # used by search engines
+  description: "DS blog" # used by search engines
 
   # Header and footer text
   header_text: >
@@ -21,14 +21,14 @@ theme_settings:
 
   # Icons
   rss: true
-  email_address: "soaka94@naver.com" # Full email address, e.g. "sam@example.com"
+  email_address: "bill7845@gmail.com" # Full email address, e.g. "sam@example.com"
   behance:
   bitbucket:
   dribbble:
   facebook:
   flickr:
   gitlab:
-  github: "devYurim"
+  github: "bill7845"
   google_plus:
   instagram:
   linkedin:  # Full URL
@@ -43,8 +43,8 @@ theme_settings:
   youtube:
 
   # Scripts
-  google_analytics: UA-111748939-1 # Tracking ID, e.g. "UA-000000-01"
-  disqus_shortname: devYurim
+  google_analytics:  # Tracking ID, e.g. "UA-000000-01"
+  disqus_shortname:
   katex: true # Enable if using math markup
   search: true # Enable the search feature
 
