--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ theme_settings:
    Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/rohanchandra/type-theme">Type Theme</a>
 
   # Icons
-  rss: true
+  rss: false
   email_address: "bill7845@gmail.com" # Full email address, e.g. "sam@example.com"
   behance:
   bitbucket:
@@ -62,7 +62,7 @@ theme_settings:
 
   # Colours, typography and padding
   # Open the "_sass > base" folder, and open "_variables.scss"
-  google_fonts: "Nanum+Gothic:400,700"
+  google_fonts: "Source+Sans+Pro:400,700,700italic,400italic"
 
   # Post navigation
   post_navigation: true
