--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@ url: "https://bill7845.github.io"
 theme_settings:
   # Meta
   title: KiHyuk
-  avatar: assets/img/blogmark.png
+  avatar: assets/img/avatar.png
   favicon: assets/favicon.ico
   gravatar: # Email MD5 hash
   description: "DS blog" # used by search engines
 
   # Header and footer text
   header_text: >
-     <p>Intelligent System Lab Researcher</p>
+     <p> DataScience BigData for Branding </p>
 
   header_text_feature_image:
   footer_text: >
